version/0.19/_sources/api/solver/_autosummary/settings/mesh_interfaces.rst.txt
:orphan:

.. _mesh_interfaces:

mesh_interfaces
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.mesh_interfaces.mesh_interfaces
    :show-inheritance:

.. rubric:: Attributes

================================================================================   ======================================================================

Attribute                                                                                                                                         Summary

================================================================================   ======================================================================
:ref:`auto_options <auto_options>`                                                                                               Enter auto-options menu.

:ref:`interface <interface_1>`                                                                                                         'interface' child.

:ref:`turbo_interface <turbo_interface>`                                                                                         'turbo_interface' child.

:ref:`enforce_continuity_after_bc <enforce_continuity_after_bc>`                       Across the interface, enforces continuity over boundary condition.

:ref:`coupled_interfaces_inherit_bcs <coupled_interfaces_inherit_bcs>`                     Copy wall boundary conditions to resulting coupled interfaces.

:ref:`verbosity <verbosity_7>`                                                                                              Set mesh interface verbosity.

:ref:`enable_si_with_nodes <enable_si_with_nodes>`                                                                  Enable sliding interfaces with nodes.

:ref:`enforce_coupled_wall_between_solids <enforce_coupled_wall_between_solids>`                            Create coupled wall interface between solids.

:ref:`enable_visualization_of_interfaces <enable_visualization_of_interfaces>`                                         Display facets on mesh interfaces.

:ref:`mapped_interface_options <mapped_interface_options>`                                                       Enter the mapped-interface-options menu.

:ref:`non_conformal_interface_numerics <non_conformal_interface_numerics>`                                        Setting non-conformal numerics options.

================================================================================   ======================================================================

.. rubric:: Methods

==================================================================================   ====================================================================================================================================

Method                                                                                                                                                                                                            Summary

==================================================================================   ====================================================================================================================================
:ref:`delete <delete_2>`                                                                                                                                                                         Delete a mesh interface.

:ref:`display <display_1>`                                                                                                                                                         Display specified mesh interface zone.

:ref:`list <list_1>`                                                                                                                                                                            List all mesh-interfaces.

:ref:`make_phaselag_from_boundaries <make_phaselag_from_boundaries>`                                                                                                                   Make interface zones phase lagged.

:ref:`make_phaselag_from_periodic <make_phaselag_from_periodic>`                                                                                                              Convert periodic interface to phase lagged.

:ref:`delete_interfaces_with_small_overlap <delete_interfaces_with_small_overlap>`                                                           Delete mesh interfaces that have an area percentage under a specified value.

:ref:`delete_all <delete_all>`                                                                                                                                                                Delete all mesh interfaces.

:ref:`improve_quality <improve_quality_1>`                                                                                                                                                Improve mesh interface quality.

:ref:`one_to_one_pairing <one_to_one_pairing>`                                                                                                                     Use the default one-to-one interface creation method?.

:ref:`auto_pairing <auto_pairing>`                                                                                                         Automatically pair and create mesh interfaces for some or all interface zones.

:ref:`transfer_motion_across_interfaces <transfer_motion_across_interfaces>`             Transfer motion from one side of the interface to the other when only one side undergoes user-defined or system-coupling motion.

:ref:`remove_left_handed_interface_faces <remove_left_handed_interface_faces>`                                                                                   Remove left-handed faces during mesh interface creation.

:ref:`non_overlapping_zone_name <non_overlapping_zone_name_1>`                                                                                          Get non-overlapping zone name from the associated interface zone.

==================================================================================   ====================================================================================================================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

